# Trading-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  OPS.md  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
deploy/: README.md  requirements.txt  services-install.sh  services-uninstall.sh
deploy/cloudflared/: config.yml.template
deploy/launchd/: com.tradingbot.api.plist  com.tradingbot.orchestrator.plist  com.tradingbot.tunnel.plist
docs/: README.md  data-sources.md  overview.md  production-baseline.md  research-agent.md  roadmap.md  system-architecture.md
migrations/: env.py
migrations/versions/: 2026_04_28_1550-b8f91e555e30_initial_schema.py  2026_04_28_1555-bbc1fea98ec9_add_user_id_to_tenant_scoped_tables.py
scripts/: run.sh
src/: cli.py  config.py
src/api/: auth.py  main.py  public_bot_routes.py  research_routes.py  routes.py  schemas.py
src/backtest/: optimize.py  runner.py
src/bots/: congress.py  cross_momentum.py  mean_reversion.py  momentum.py  sentiment.py
src/core/: alerter.py  allocator.py  backup.py  broker.py  healthz.py  init_db.py  logging_setup.py  metrics.py  orchestrator.py  reconciler.py  regime.py  risk.py  sizing.py  store.py  strategy.py
src/data/: bars.py  congress.py  features.py  news.py  sentiment.py
src/research/: __init__.py  agents.py  pipeline.py  schemas.py  storage.py
src/research/sources/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  reddit.py  social_apify.py  web.py  youtube.py
src/templates/: __init__.py  _indicators.py  base.py  ma_cross.py  mean_reversion_rsi.py  momentum_zscore.py  vol_breakout.py
tests/: test_alerter.py  test_allocator.py  test_auth.py  test_backup.py  test_config.py  test_congress.py  test_cross_momentum.py  test_features.py  test_indicators.py  test_metrics.py  test_news_sentiment.py  test_optimize.py  test_orchestrator.py  test_public_bot_routes.py  test_regime.py  test_research.py  test_risk.py  test_sizing.py  test_templates.py
web/: AGENTS.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx  page.tsx
web/src/app/(app)/audit/: page.tsx
web/src/app/(app)/bots/: page.tsx
web/src/app/(app)/orders/: page.tsx
web/src/app/(app)/positions/: page.tsx
web/src/app/(app)/signals/: page.tsx
web/src/app/(app)/trades/: page.tsx
web/src/app/login/: page.tsx
web/src/components/: auth-gate.tsx  providers.tsx  sidebar.tsx  topbar.tsx  wordmark.tsx
web/src/components/charts/: equity-chart.tsx
web/src/components/ui/: card.tsx  metric.tsx  pill.tsx  table.tsx
web/src/lib/: api.ts  types.ts  utils.ts
