[project]
name = "trading-bot"
version = "0.1.0"
description = "Multi-strategy paper-first trading bot platform with comparative dashboard."
requires-python = ">=3.11"
readme = "README.md"
# Slim base — just what the live worker needs. Heavy / niche deps are in optional groups.
dependencies = [
    "alpaca-py>=0.30.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
# Streamlit dashboard — install on whatever machine renders the UI, not on the worker.
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
]
# Backtest harness — vectorbt pulls in numba/llvmlite which are heavy; keep them out of prod.
backtest = [
    "vectorbt>=0.26",
    "ta>=0.11",
    "optuna>=3.5",
]
# News/sentiment FinBERT pipeline.
sentiment = [
    "transformers>=4.40",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "streamlit>=1.32",
    "plotly>=5.20",
    "vectorbt>=0.26",
    "ta>=0.11",
    "optuna>=3.5",
]

[project.scripts]
trading-bot = "src.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
